--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
-sudo: false
 warnings_are_errors: false
 cache: packages;
 deploy:
   provider: releases
-  api_key: "GITHUB OAUTH TOKEN"
+  api_key: "$GITHUB_TOKEN"
   file: "vignettes/paper.html"
   skip_cleanup: true
   on:
