Add build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@
 language: R
 warnings_are_errors: false
 cache: packages;
+script
+  - Rscript -e 'rmarkdown::render("vignettes/paper.Rmd")'
 deploy:
   provider: releases
   api_key: "$GITHUB_TOKEN"
