--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: R
 warnings_are_errors: false
 cache: packages;
 script:
+  - Rscript -e 'devtools::install()'
   - Rscript -e 'rmarkdown::render("vignettes/paper.Rmd")'
 deploy:
   provider: releases
