--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ deploy:
   file: "vignettes/paper.html"
   skip_cleanup: true
   on:
-    tags: true
+    tags: no
     branch:
       - master
       - dev
